# PicoEEG

./: .gitignore  CMakeLists.txt  dataProc.c  dataProc.h  dataRecv.c  dataRecv.h  main.c  sharedData.h
